--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     </dependencies>
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compilter.target>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
 
